syntax = "proto3";

package vartrack.v1;

import "vartrack/v1/utils/secret_ref.proto";
import "buf/validate/validate.proto";

message GitHub {
  // --- Identity ---
  string name = 1 [(buf.validate.field).string.const = "github"];

  // --- Connection Settings ---
  string endpoint = 2 [(buf.validate.field).string.uri = true];
  string protocol = 3 [(buf.validate.field).string = {in: ["ssh", "http", "https"]}];

  // --- Credentials (inline string or external ref) ---
  optional SecretRef token = 4;
  optional string username = 5;
  optional SecretRef password = 6;
  optional SecretRef secret = 7;

  // --- Scope ---
  optional string org_name = 8;

  // --- Reliability & Performance ---
  bool verify_ssl = 9;
  int32 timeout = 10 [(buf.validate.field).int32.gte = 1];
  int32 max_retries = 11 [(buf.validate.field).int32.gte = 0];
  int32 page_size = 12 [(buf.validate.field).int32 = {gte: 1, lte: 100}];

  // --- Webhook Header Configuration ---
  string event_type_header = 13 [(buf.validate.field).string.const = "X-GitHub-Event"];
  string git_scm_signature = 14 [(buf.validate.field).string.const = "X-Hub-Signature-256"];

  // --- Event Name Constants ---
  string push_event_name = 15 [(buf.validate.field).string.const = "push"];
  string pr_event_name = 16 [(buf.validate.field).string.const = "pull_request"];
}
